src/objects/maps__ButtonSet__c.object
<CustomObject>
    <fields>
        <fullName>maps__CustomAddressLayout__c</fullName>
        <label>Custom Address Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MassActionLayout__c</fullName>
        <label>Mass Action Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionLayout__c</fullName>
        <label>My Position Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__POILayout__c</fullName>
        <label>POI Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__TooltipLayout__c</fullName>
        <label>Tooltip Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Button Set</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Button Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>